venndb-usage/tests/fails/any_filter_bool.stderr
error: Invalid field-level `venndb` attribute
       `any` cannot be used with `bool`
 --> tests/fails/any_filter_bool.rs:6:15
  |
6 |     is_alive: bool,
  |               ^^^^
